# optee_test

./: .gitignore  CMakeLists.txt  README.md
host/xtest/: CMakeLists.txt  aes_perf.c  regression_1000.c  regression_4000.c  regression_5000.c  xtest_helpers.c  xtest_helpers.h  xtest_main.c  xtest_test.c
scripts/: reset.sh
ta/: CMakeLists.txt  ta_properties.c.in
ta/crypt/: cryp_taf.c
ta/os_test/: os_test.c  ta_entry.c
